# video_similarity

./: CLAUDE.md  README.md  api_server.py  api_server_cli.py  bulk_upload.py  fast_dedup.py  pyproject.toml  requirements.txt  run.sh  setup.sh
api_state/: __init__.py  cache.py  config.py  search.py  state.py  thumbnails.py  visil.py
dedup/: __init__.py  helpers.py  index.py  phash_filter.py  qdrant_index.py  rerank.py  store.py  vpdq_filter.py
dedup/qdrant_index/: __init__.py  _imports.py  _index.py
docs/: fast_dedup_approach.md
model/: video_descriptor.py
model/video_descriptor/: __init__.py  _base.py  _clip.py  _factory.py  _quantization.py  _s2vs.py
notebooks/: visualization.ipynb
utils/: __init__.py  training.py  transforms.py  video.py
web-ui/: index.html  package.json  tsconfig.tsbuildinfo
web-ui/src/: App.tsx  api.ts
web-ui/src/components/: SearchResults.tsx  SearchTab.tsx  Settings.tsx  UploadTab.tsx  VideoLibrary.tsx
