[project]
name = "s2vs"
version = "1.0.0"
description = "Self-Supervised Video Similarity Learning — video deduplication system"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "torch==2.11.0",
    "torchvision==0.26.0",
    "pytorchvideo==0.1.5",
    "timm==1.0.26",
    "einops==0.8.2",
    "safetensors==0.7.0",
    "ffmpeg-python==0.2.0",
    "opencv-python==4.13.0.92",
    "imageio==2.37.3",
    "pillow==12.2.0",
    "av==17.0.0",
    "numpy==2.4.4",
    "pandas==3.0.2",
    "scipy==1.17.1",
    "scikit-learn==1.8.0",
    "h5py==3.16.0",
    "faiss-cpu==1.13.2",
    "fastapi==0.136.0",
    "uvicorn[standard]==0.44.0",
    "python-multipart==0.0.26",
    "httpx==0.28.1",
    "starlette==1.0.0",
    "pydantic==2.13.2",
    "augly==1.0.0",
    "tensorboard==2.20.0",
    "typer==0.24.1",
    "tqdm==4.67.3",
    "seaborn==0.13.2",
    "imagehash>=4.0",
    "qdrant-client==1.17.1",
]

[project.optional-dependencies]
quantization = ["optimum-quanto"]
clip = ["open-clip-torch"]

[project.scripts]
s2vs-server = "api_server_cli:main"
s2vs-upload = "bulk_upload:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
